# Economic_Impact_Tool_SE

./: .replit  app.py  data_processor.py  economic_calculator.py  pdf_generator.py  pyproject.toml  replit.md  requirements.txt  stack_client.py  test.py
attached_assets/: Pasted--At-the-top-of-app-py-after-imports-and-page-config-Cus_1768065647510.txt  Pasted-Add-PDF-generation-capability-1-Add-to-requirements-txt-weasyprint-60-1-2-Create-a-new-file-c-1763579625429_1763579625430.txt  Pasted-Add-a-geography-selection-screen-BEFORE-the-main-form-C_1768063873615.txt  Pasted-Add-a-new-Sources-Methodology-section-at-the-END-of-the-report-right-before-the-download-button-1763576265657_1763576265659.txt  Pasted-Add-comprehensive-form-validation-and-submission-handling-VALIDATION-LOGIC-When-the-Generate-Rep-1763330421407_1763330421419.txt  Pasted-Add-final-features-to-complete-the-form-1-DATA-PREVIEW-SECTION-After-successful-validation-show-1763330758207_1763330758207.txt  Pasted-Fix-the-geography-selector-and-logo-display-issues-1-AD_1768159899903.txt  Pasted-Fix-these-UI-issues-1-MAKE-THE-CARDS-CLICKABLE-Remove-t_1768066851577.txt  Pasted-Integrate-Stack-ai-API-to-generate-real-reports-SETUP-1-Add-these-to-requirements-txt-requ-1763334569275_1763334569276.txt  Pasted-Make-these-final-adjustments-to-the-form-1-MAKE-ALL-FIELDS-OPTIONAL-EXCEPT-PROPOSED-USE-Upd-1763826977938_1763826977941.txt  Pasted-Make-these-quick-UX-improvements-1-REMOVE-JSON-IMPORT-users-don-t-need-this-Remove-the-fi-1763332273288_1763332273289.txt  UI_Polish_Instructions_1768065980632.md  (+3 more)
(+4 files in other folders)
