[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.10",
    "pillow>=10.4.0",
    "plotly>=6.4.0",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
    "streamlit==1.29.0",
    "weasyprint==60.1",
]
